[gd_scene load_steps=51 format=3 uid="uid://l7sdqc0aca1e"]

[ext_resource type="Script" path="res://Scripts/BattleScene.gd" id="1_vouak"]
[ext_resource type="Texture2D" uid="uid://dyyaq08o5mjn" path="res://Sprites/Player_SS/MC_Idle_SS.png" id="2_lsn6s"]
[ext_resource type="Texture2D" uid="uid://uksfnu3bxnsv" path="res://Sprites/Enemy_SS/EN_Idle_SS.png" id="3_ryeea"]
[ext_resource type="Script" path="res://Scripts/Enemies.gd" id="4_3b4e0"]
[ext_resource type="Shader" uid="uid://csji184irp4kx" path="res://Sprites/Shaders/Hit_Flash.res" id="4_b0p0w"]
[ext_resource type="Texture2D" uid="uid://cgplh4kyqatep" path="res://Sprites/Enemy_SS/EN2_Idle_SS-Sheet.png" id="6_6ytom"]
[ext_resource type="Texture2D" uid="uid://xygn3w2mff63" path="res://Sprites/Enemy_SS/EN3_Idle_SS-Sheet.png" id="7_whmoh"]

[sub_resource type="Animation" id="Animation_xvb8x"]
resource_name = "Battle_Start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-642, -64), Vector2(-226, -64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Enemy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(965, -82), Vector2(379, -82)]
}

[sub_resource type="Animation" id="Animation_kusp7"]
resource_name = "Enemy_Dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Enemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(379, -82), Vector2(379, 599)]
}

[sub_resource type="Animation" id="Animation_j6bun"]
resource_name = "Player_Dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-226, -64), Vector2(-226, 574)]
}

[sub_resource type="Animation" id="Animation_3rm3g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-226, -64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Enemy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(379, -82)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u7g28"]
_data = {
"Battle_Start": SubResource("Animation_xvb8x"),
"Enemy_Dead": SubResource("Animation_kusp7"),
"Player_Dead": SubResource("Animation_j6bun"),
"RESET": SubResource("Animation_3rm3g")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q5m73"]
shader = ExtResource("4_b0p0w")
shader_parameter/enabled = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqkl"]
atlas = ExtResource("2_lsn6s")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42ymp"]
atlas = ExtResource("2_lsn6s")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyw87"]
atlas = ExtResource("2_lsn6s")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueuye"]
atlas = ExtResource("2_lsn6s")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_x32wo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42ymp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyw87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueuye")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_1tv34"]
length = 0.001

[sub_resource type="Animation" id="Animation_w6k8r"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(379, -82), Vector2(389, -82), Vector2(369, -82), Vector2(379, -82)]
}

[sub_resource type="Animation" id="Animation_c4pee"]
resource_name = "hit_flash_player"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-226, -64), Vector2(-236, -64), Vector2(-216, -64), Vector2(-226, -64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0og5h"]
_data = {
"RESET": SubResource("Animation_1tv34"),
"hit_flash": SubResource("Animation_w6k8r"),
"hit_flash_player": SubResource("Animation_c4pee")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fnel2"]
shader = ExtResource("4_b0p0w")
shader_parameter/enabled = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0hto"]
atlas = ExtResource("3_ryeea")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lhsr"]
atlas = ExtResource("3_ryeea")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnbsi"]
atlas = ExtResource("3_ryeea")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_odkmo"]
atlas = ExtResource("3_ryeea")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhjac"]
atlas = ExtResource("6_6ytom")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6txol"]
atlas = ExtResource("6_6ytom")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp2rf"]
atlas = ExtResource("6_6ytom")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3xtr"]
atlas = ExtResource("6_6ytom")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q7f5"]
atlas = ExtResource("7_whmoh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b4cf"]
atlas = ExtResource("7_whmoh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl4ik"]
atlas = ExtResource("7_whmoh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sovn"]
atlas = ExtResource("7_whmoh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c2buw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0hto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lhsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnbsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odkmo")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhjac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6txol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp2rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3xtr")
}],
"loop": true,
"name": &"Idle_2",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q7f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b4cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl4ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sovn")
}],
"loop": true,
"name": &"Idle_3",
"speed": 7.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qpgry"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_didxf"]
shadow_size = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i75p5"]
bg_color = Color(0.109463, 0.00211479, 1.20327e-08, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.760843, 0.0834471, 3.85046e-07, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggbyn"]
bg_color = Color(0.282772, 0.0118961, 7.21961e-08, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.760843, 0.0834471, 3.85046e-07, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60mmj"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.760843, 0.0834471, 3.85046e-07, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvpdu"]
bg_color = Color(0, 0.0685182, 0.161474, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0, 0.407283, 0.755181, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydqkf"]
bg_color = Color(1.20327e-07, 0.197365, 0.387287, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0, 0.407283, 0.755181, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vnhkb"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0, 0.407283, 0.755181, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iusht"]
bg_color = Color(0.169079, 0.05379, 0, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.772957, 0.346972, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aonqr"]
bg_color = Color(0.318618, 0.126391, 9.62615e-08, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.772957, 0.346972, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxnuq"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.772957, 0.346972, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkpmq"]
bg_color = Color(0.00180898, 0.107093, 1.20327e-08, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.0498905, 0.59515, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3j0ta"]
bg_color = Color(0.00699741, 0.22982, 4.81308e-08, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.0498905, 0.59515, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_akvma"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.0498905, 0.59515, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_vouak")

[node name="Transition" type="AnimationPlayer" parent="."]
root_node = NodePath("../CombatUI")
libraries = {
"": SubResource("AnimationLibrary_u7g28")
}

[node name="EnemyInfo" type="Node2D" parent="."]
script = ExtResource("4_3b4e0")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(92, 27)

[node name="Player" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_q5m73")
position = Vector2(-226, -64)
scale = Vector2(1.89258, 1.9463)
sprite_frames = SubResource("SpriteFrames_x32wo")
animation = &"Idle"

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_0og5h")
}

[node name="Enemy" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_fnel2")
position = Vector2(379, -82)
scale = Vector2(2.46875, 2.46875)
sprite_frames = SubResource("SpriteFrames_c2buw")
animation = &"Idle_3"
frame = 3
frame_progress = 0.206252

[node name="HitFlashAnimationEnemy" type="AnimationPlayer" parent="Enemy"]
libraries = {
"": SubResource("AnimationLibrary_0og5h")
}

[node name="CombatUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -148.0
offset_top = 239.0
offset_right = -148.0
offset_bottom = 239.0

[node name="BattleLog" type="Label" parent="CombatUI"]
layout_mode = 2
offset_left = 52.0
offset_top = -81.0
offset_right = 808.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_qpgry")
text = "Battle Start!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PlayerHealthLabel" type="Label" parent="CombatUI"]
layout_mode = 0
offset_left = -218.0
offset_top = -509.0
offset_right = 71.0
offset_bottom = -486.0
horizontal_alignment = 1

[node name="EnemyHealthLabel" type="Label" parent="CombatUI"]
layout_mode = 0
offset_left = 378.0
offset_top = -512.0
offset_right = 671.0
offset_bottom = -489.0
label_settings = SubResource("LabelSettings_didxf")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CombatUI"]
layout_mode = 0
offset_left = -241.0
offset_top = -113.0
offset_right = -22.0
offset_bottom = 111.0
alignment = 1

[node name="Attack" type="Button" parent="CombatUI/VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_i75p5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ggbyn")
theme_override_styles/normal = SubResource("StyleBoxFlat_60mmj")
text = "Attack
"
vertical_icon_alignment = 0

[node name="Skill" type="Button" parent="CombatUI/VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_rvpdu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ydqkf")
theme_override_styles/normal = SubResource("StyleBoxFlat_vnhkb")
text = "Skill
"
vertical_icon_alignment = 0

[node name="Defend" type="Button" parent="CombatUI/VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_iusht")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aonqr")
theme_override_styles/normal = SubResource("StyleBoxFlat_jxnuq")
text = "Defend
"
vertical_icon_alignment = 0

[node name="Run" type="Button" parent="CombatUI/VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_fkpmq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3j0ta")
theme_override_styles/normal = SubResource("StyleBoxFlat_akvma")
text = "Run
"
vertical_icon_alignment = 0

[node name="SkillMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -434.0
offset_top = 368.0
offset_right = 599.0
offset_bottom = 368.0

[node name="BackButton" type="Button" parent="SkillMenu"]
layout_mode = 2
offset_left = -82.0
offset_top = -73.0
offset_right = 26.0
offset_bottom = -30.0
theme_override_styles/hover = SubResource("StyleBoxFlat_rvpdu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ydqkf")
theme_override_styles/normal = SubResource("StyleBoxFlat_vnhkb")
text = "Back
"

[node name="SkillList" type="VBoxContainer" parent="SkillMenu"]
layout_mode = 0
offset_left = 41.0
offset_top = -234.0
offset_right = 314.0
offset_bottom = -5.0
